@startuml

title __PIZZA's Class Diagram__\n

  namespace com.atguigu.factory.factorymethod.pizzastore.pizza.pizza {
    class com.atguigu.factory.factorymethod.pizzastore.pizza.pizza.BJCheesePizza {
        + prepare()
    }
  }
  

  namespace com.atguigu.factory.factorymethod.pizzastore.pizza.pizza {
    class com.atguigu.factory.factorymethod.pizzastore.pizza.pizza.BJPepperPizza {
        + prepare()
    }
  }
  

  namespace com.atguigu.factory.factorymethod.pizzastore.pizza.pizza {
    class com.atguigu.factory.factorymethod.pizzastore.pizza.pizza.LDCheesePizza {
        + prepare()
    }
  }
  

  namespace com.atguigu.factory.factorymethod.pizzastore.pizza.pizza {
    class com.atguigu.factory.factorymethod.pizzastore.pizza.pizza.LDPepperPizza {
        + prepare()
    }
  }
  

  namespace com.atguigu.factory.factorymethod.pizzastore.pizza.pizza {
    abstract class com.atguigu.factory.factorymethod.pizzastore.pizza.pizza.Pizza {
        # name : String
        + bake()
        + box()
        + cut()
        {abstract} + prepare()
        + setName()
    }
  }
  

  com.atguigu.factory.factorymethod.pizzastore.pizza.pizza.BJCheesePizza -up-|> com.atguigu.factory.factorymethod.pizzastore.pizza.pizza.Pizza
  com.atguigu.factory.factorymethod.pizzastore.pizza.pizza.BJPepperPizza -up-|> com.atguigu.factory.factorymethod.pizzastore.pizza.pizza.Pizza
  com.atguigu.factory.factorymethod.pizzastore.pizza.pizza.LDCheesePizza -up-|> com.atguigu.factory.factorymethod.pizzastore.pizza.pizza.Pizza
  com.atguigu.factory.factorymethod.pizzastore.pizza.pizza.LDPepperPizza -up-|> com.atguigu.factory.factorymethod.pizzastore.pizza.pizza.Pizza


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
